tests/interpreter/if-statement-else-block-error.lox
if false {
    x;
} else {
    y;
}
